final styling for login and sign-up, fixed navbar overflow issue and styled it, some common styles moved to styles.css

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,11 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Inconsolata);
 
 
-.home-background{
-      /* background: url("../../assets/skyline-night.jpg") repeat-x center; */
-      background-color: black;
-      padding-top:50px;
-}
 
 
 /*ABOUT ELEMENTS  */
@@ -24,7 +19,8 @@
 }
 
 .value-props:hover{
-  background-color:lightslategrey;
+  background-color: #F65B61;
+ 
 }
 
 .prop h2 {
@@ -56,6 +52,7 @@
     color: white;
 }
 
+
 #home-title{
     font-family: 'Inconsolata', monospace;
     color: white;
@@ -66,6 +63,12 @@
     font-family: 'Inconsolata', monospace;
     color: white;
     font-size:35pt;
+    text-transform: uppercase;
+}
+
+#about-info{
+    font-family: 'Inconsolata', monospace;
+    color: white;
     text-transform: uppercase;
 }
 
